     which avoids problems when removing requires

   . misc bug fixes

------------------------------
       Version 7.9
------------------------------

   . various improvements to Check Syntax arrows
     and renaming, thanks to Sorawee Porncharoenwase

   . misc other bug fixes and documentation improvements

------------------------------
       Version 7.8
------------------------------

  . make Scribble's PDF button work under unix

  . compiled/errortrace is no longer consulted by DrRacket as
    a source of zo files (before it was consulted when in debugging
    mode, but this was problematic)

  . performance improvements for killing programs that are infinite
    non-tail recursive loops

  . misc small bug fixes and performance improvements

------------------------------
       Version 7.7
------------------------------

  . replaced DrRacket's internal bug report mechanism with a pointer to GitHub

  . various bug fixes, minor performance improvements, and documentation improvements

------------------------------
       Version 7.6
------------------------------

  . improved the responsivness of scrolling via trackpads

  . improved dark mode on mac os and linux

------------------------------
       Version 7.5
------------------------------

  . change the bound variable jumping around to ignore arrows that
    come from `require`s.

  . recall the most recently used #lang line and use that for new tabs

  . minor bug fixes and documentation fixes

------------------------------
       Version 7.4
------------------------------

  . minor bug fixes

------------------------------
       Version 7.3
------------------------------

  . Improved DrRacket's support for the OS's
    light-on-dark color schemes

  . minor bug fixes

------------------------------
       Version 7.2
------------------------------

  . Added QuickScript to the standard install for DrRacket.
    Thanks to Laurent Orseau for his work!

  . misc minor bug fixes
